--- a/style.css
+++ b/style.css
@@ -43,6 +43,16 @@ header p {
     padding: 1rem 2rem;
     font-size: 1.5rem;
     border: none;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background: #fff;
+}
+
+.btn:disabled {
+    background: #b9b9b9;
+    cursor: default;
 }
 
 h1 {
